--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^4.26.1",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "react": "16.2",
-    "react-dom": "16.2",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development",
